# distributed_slam_cs217

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  build.sh  calibration.txt
cpp/playground/: SFMdata.h  VisualISAMExample.cpp  poseGraphPlayground.cpp
cpp/src/: main.cpp
cpp/src/backend/: poseGraph.cpp  poseGraph.hpp
cpp/src/frontend/: arucoFrontEnd.cpp  arucoFrontEnd.hpp  featureMatcher.cpp  featureMatcher.hpp
cpp/src/utils/: aruco.cpp  aruco.hpp  calibrateWithCharuco.cpp  generateAruco.cpp  generateAruco.hpp  logger.cpp  logger.hpp  pangolinDisplay.cpp  pangolinDisplay.hpp  realsense.cpp  realsense.hpp
py/: pyrightconfig.json
py/src/: main.py
py/src/frontend/: front_end_wrapper.py
py/src/utils/: aruco.py  logger.py  rs_utils.py
src/: main.cpp
